# ai-history-explorer

./: -  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  codecov.yml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
benches/: filter_application.rs  fuzzy_search.rs  history_parsing.rs  index_building.rs
docs/: benchmarks.md  clipboard-next-steps.md  code-review-phase1.md  design-decisions-phase1.md  design-decisions-phase2.md  filter-integration-plan.md  manual-testing-checklist.md  nucleo-streaming-research.md  plan.md  pr-5-next-steps.md  pr-5-review.md  remaining-tasks.md
docs/archive/: TESTING.md
hooks/: pre-push
plans/claude-history-explorer/: plan.md
plans/persistent-index/: plan.md
plans/phase2-tui/: implementation.md
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/clipboard/: mod.rs
src/filters/: apply.rs  ast.rs  mod.rs  parser.rs
src/index_storage/: metadata.rs  mod.rs  persistence.rs
src/indexer/: builder.rs  mod.rs  project_discovery.rs
src/models/: history.rs  mod.rs  project.rs  search.rs
src/parsers/: conversation.rs  deserializers.rs  history.rs  mod.rs
src/tui/: app.rs  events.rs  layout.rs  mod.rs  rendering.rs  terminal.rs  timestamps.rs
src/utils/: environment.rs  mod.rs  paths.rs  terminal.rs
tests/: cli_test.rs  clipboard_test.rs  edge_cases_test.rs  filter_integration_test.rs  integration_test.rs  memory_test.rs  security_test.rs
tests/common/: mod.rs
