[package]
name = "ai-history-explorer"
version = "0.1.0"
edition = "2024"

[lib]
name = "ai_history_explorer"
path = "src/lib.rs"

[[bin]]
name = "ai-history-explorer"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "2.3"
uuid = "1.11"
