[package]
name = "ai-history-explorer"
version = "0.1.0"
edition = "2024"

[lib]
name = "ai_history_explorer"
path = "src/lib.rs"

[[bin]]
name = "ai-history-explorer"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
percent-encoding = "2.3"
uuid = "1.11"
walkdir = "2"
arboard = "3.4"
rayon = "1.10"
# TUI dependencies (Phase 2)
nucleo = "0.5"
ratatui = "0.29"
crossterm = "0.29.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.0"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "history_parsing"
harness = false

[[bench]]
name = "index_building"
harness = false

[[bench]]
name = "fuzzy_search"
harness = false

[[bench]]
name = "filter_application"
harness = false
